--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
         body{
             width: 100%;
+            min-width: 450px;
             margin: 0px 0px 0px 0px;
         }
         #welcome{
