--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <title>Raghav Babbar</title>
     <style>
         body{
-            width: 100%;
-            min-width: 450px;
             margin: 0px 0px 0px 0px;
         }
         #welcome{
@@ -54,12 +52,14 @@
             font-weight: 500;
             margin-top: 40px;
             margin-bottom: 0px;
+            text-align: center;
         }
         #job{
             font-size: 22px;
             font-family: 'DM Sans', sans-serif;
             font-weight: 500;
             margin-top: 10px;
+            text-align: center;
         }
         #logos{
             display: flex;
@@ -72,6 +72,7 @@
         }
         #about_section{
             background-color: #12131a;
+            width: 100%;
             color: white;
             height: 600px;
             padding-top: 70px;
@@ -91,6 +92,7 @@
             font-weight: 400;
             margin-top: 15px;
             margin-bottom: 0px;
+            text-align: center;
         }
         #abtme2{
             font-size: 35px;
@@ -98,14 +100,13 @@
             font-weight: 500;
             margin-top: 5px;
             margin-bottom: 0px;
+            text-align: center;
         }
         #abt_boxes{
             display: flex;
             justify-content: space-around;
             align-items: center;
             margin-top: 80px;
-            padding-left: 50px;
-            padding-right: 50px;
         }
         #exp{
             border: 1px solid white;
@@ -113,7 +114,7 @@
             height: 260px;
             width: 450px;
             margin-top: 50px;
-            margin-right: 40px;
+            margin-right: 30px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -125,7 +126,7 @@
             height: 260px;
             width: 450px;
             margin-top: 50px;
-            margin-left: 40px;
+            margin-left: 30px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -149,6 +150,7 @@
             font-weight: 500;
             margin-top: 0px;
             margin-bottom: 0px;
+            text-align: center;
         }
         #exp3{
             font-size: 17px;
@@ -156,6 +158,7 @@
             color: rgb(138, 138, 138);
             font-weight: 500;
             margin-top: 5px;
+            text-align: center;
         }
         #edulogo{
             filter: invert();
@@ -175,6 +178,7 @@
             font-weight: 500;
             margin-top: 0px;
             margin-bottom: 0px;
+            text-align: center;
         }
         #edu3{
             font-size: 17px;
@@ -184,6 +188,7 @@
             font-weight: 500;
             margin-top: 0px;
             margin-bottom: 0px;
+            text-align: center;
         }
         #edu4{
             font-size: 17px;
@@ -192,6 +197,7 @@
             font-weight: 500;
             margin-top: 0px;
             margin-bottom: 0px;
+            text-align: center;
         }
         @media screen and (max-width: 1000px) {
             #welcome{
@@ -215,10 +221,25 @@
         }
         @media screen and (max-width: 575px) {
             #exp{
-                width: 350px;
+                width: 295px;
             }
             #edu{
-                width: 350px;
+                width: 295px;
+            }
+            #exp2{
+                font-size: 14px;
+            }
+            #exp3{
+                font-size: 14px;
+            }
+            #edu2{
+                font-size: 14px;
+            }
+            #edu3{
+                font-size: 14px;
+            }
+            #edu4{
+                font-size: 14px;
             }
         }
     </style>
