--- a/index.html
+++ b/index.html
@@ -3,247 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,400;9..40,500&display=swap" rel="stylesheet">
     <title>Raghav Babbar</title>
-    <style>
-        body{
-            margin: 0px 0px 0px 0px;
-        }
-        #welcome{
-            margin-top: 70px;
-            padding-left: 100px;
-            margin-bottom: 100px;
-            font-size: 55px;
-            font-family: 'DM Sans', sans-serif;
-            font-weight: 500;
-        }
-        #pfp{
-            height: 300px;
-            width: 300px;
-            border-radius: 50%;
-        }
-        #intro{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 100px;
-            padding-left: 30px;
-            padding-right: 30px;
-        }
-        #intro_text{
-            width: 350px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        #hello{
-            font-size: 18px;
-            font-family: 'DM Sans', sans-serif;
-            color: #626262;
-            margin-bottom: 0px;
-        }
-        #name{
-            font-size: 38px;
-            font-family: 'DM Sans', sans-serif;
-            font-weight: 500;
-            margin-top: 40px;
-            margin-bottom: 0px;
-            text-align: center;
-            height: 50px;
-        }
-        #job{
-            font-size: 22px;
-            font-family: 'DM Sans', sans-serif;
-            font-weight: 500;
-            margin-top: 10px;
-            text-align: center;
-        }
-        #logos{
-            display: flex;
-        }
-        .logo{
-            width: 40px;
-            height: 40px;
-            margin-left: 10px;
-            margin-right: 10px;
-        }
-        #about_section{
-            background-color: #12131a;
-            width: 100%;
-            color: white;
-            height: 600px;
-            padding-top: 70px;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-        }
-        #abtme_block{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        #abtme1{
-            font-size: 20px;
-            font-family: 'DM Sans', sans-serif;
-            color: #626262;
-            font-weight: 400;
-            margin-top: 15px;
-            margin-bottom: 0px;
-            text-align: center;
-        }
-        #abtme2{
-            font-size: 35px;
-            font-family: 'DM Sans', sans-serif;
-            font-weight: 500;
-            margin-top: 5px;
-            margin-bottom: 0px;
-            text-align: center;
-        }
-        #abt_boxes{
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            margin-top: 80px;
-        }
-        #exp{
-            border: 1px solid white;
-            border-radius: 40px;
-            height: 260px;
-            width: 450px;
-            margin-top: 50px;
-            margin-right: 30px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        #edu{
-            border: 1px solid white;
-            border-radius: 40px;
-            height: 260px;
-            width: 450px;
-            margin-top: 50px;
-            margin-left: 30px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        #explogo{
-            filter: invert();
-            height: 50px;
-            width: 50px;
-        }
-        #exp1{
-            font-size: 20px;
-            font-family: 'DM Sans', sans-serif;
-            font-weight: 400;
-            margin-top: 40px;
-        }
-        #exp2{
-            font-size: 17px;
-            font-family: 'DM Sans', sans-serif;
-            color: rgb(138, 138, 138);
-            font-weight: 500;
-            margin-top: 0px;
-            margin-bottom: 0px;
-            text-align: center;
-        }
-        #exp3{
-            font-size: 17px;
-            font-family: 'DM Sans', sans-serif;
-            color: rgb(138, 138, 138);
-            font-weight: 500;
-            margin-top: 5px;
-            text-align: center;
-        }
-        #edulogo{
-            filter: invert();
-            height: 50px;
-            width: 50px;
-        }
-        #edu1{
-            font-size: 20px;
-            font-family: 'DM Sans', sans-serif;
-            font-weight: 400;
-            margin-top: 40px;
-        }
-        #edu2{
-            font-size: 17px;
-            font-family: 'DM Sans', sans-serif;
-            color: rgb(138, 138, 138);
-            font-weight: 500;
-            margin-top: 0px;
-            margin-bottom: 0px;
-            text-align: center;
-        }
-        #edu3{
-            font-size: 17px;
-            font-family: 'DM Sans', sans-serif;
-            text-align: center;
-            color: rgb(138, 138, 138);
-            font-weight: 500;
-            margin-top: 0px;
-            margin-bottom: 0px;
-            text-align: center;
-        }
-        #edu4{
-            font-size: 17px;
-            font-family: 'DM Sans', sans-serif;
-            color: rgb(138, 138, 138);
-            font-weight: 500;
-            margin-top: 0px;
-            margin-bottom: 0px;
-            text-align: center;
-        }
-        @media screen and (max-width: 1000px) {
-            #welcome{
-                text-align: center;
-                padding-left: 0px;
-            }
-        }
-        @media screen and (max-width: 1122px) {
-            #about_section{
-                height: 900px;
-            }
-            #abt_boxes{
-                flex-direction: column;
-            }
-            #exp{
-                margin-right: 0px;
-            }
-            #edu{
-                margin-left: 0px;
-            }
-        }
-        @media screen and (max-width: 575px) {
-            #exp{
-                width: 295px;
-            }
-            #edu{
-                width: 295px;
-            }
-            #exp2{
-                font-size: 14px;
-            }
-            #exp3{
-                font-size: 14px;
-            }
-            #edu2{
-                font-size: 14px;
-            }
-            #edu3{
-                font-size: 14px;
-            }
-            #edu4{
-                font-size: 14px;
-            }
-        }
-    </style>
 </head>
 <body>
     <h1 id="welcome">Welcome &#128075;</h1>
@@ -285,13 +49,6 @@
         </div>
     </div>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script>
-        var typed = new Typed("#name", {strings: ["Developer", "Student","Raghav Babbar"],
-        typeSpeed : 40,
-        backSpeed : 40,
-        backDelay : 1500,
-        showCursor : false
-        })
-    </script>
+    <script src="portfolio.js"></script>
 </body>
 </html>
