--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <link rel="stylesheet" href="portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,400;9..40,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,400;9..40,500&display=swap" rel="stylesheet">
     <title>Raghav Babbar</title>
 </head>
 <body>
-    <h1 id="welcome">Welcome &#128075;</h1>
-    <div id="intro">
-        <img src="pfp.jpg" alt="pfp" id="pfp">
-        <div id="intro_text">
+    <div id="header" class="fadein">
+        <h1 id="welcome">Welcome &#128075;</h1>
+        <a href="#contact_section" id="contact_sc">Contact Me</a>
+    </div>
+    <div id="intro" class="fadein">
+        <img src="pfp.jpg" alt="pfp" id="pfp" class="bottotop">
+        <div id="intro_text" class="bottotop">
             <h2 id="hello">Hello, I'm</h2>
             <h1 id="name"></h1>
             <h2 id="job">Frontend Developer</h2>
@@ -28,11 +31,11 @@
         </div>
     </div>
     <div id="about_section">
-        <div id="abtme_block">
+        <div id="abtme_block" class="bottotop" class="fadein">
             <h3 id="abtme1">Get to know</h3>
             <h2 id="abtme2">About Me</h2>
         </div>
-        <div id="abt_boxes">
+        <div id="abt_boxes" class="bottotop" class="fadein">
             <div id="exp">
                 <img src="experience.png" alt="exp" id="explogo">
                 <p id="exp1">Experience</p>
@@ -48,7 +51,23 @@
             </div>
         </div>
     </div>
+    <div id="contact_section" class="fadein">
+        <div id="contact_block" class="bottotop">
+            <h3 id="contact1">Get in Touch</h3>
+            <h2 id="contact2">Contact Me</h2>
+        </div>
+        <div id="contact_boxes" class="bottotop">
+            <div id="email_link">
+                <img src="email.png" alt="email" id="emaillogo">
+                <p id="email">raghavbabbar12345@gmail.com</p>
+            </div>
+            <div id="phone_link">
+                <img src="phone.svg" alt="phone" id="phonelogo">
+                <p id="phone">+91-8755444674</p>
+            </div>
+        </div>
+    </div>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="portfolio.js"></script>
+    <script defer src="portfolio.js"></script>
 </body>
 </html>
