--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <title>Raghav Babbar</title>
 </head>
 <body>
+    <div id="cursor_dot"></div>
+    <div id="cursor_outline"></div>
     <div id="header" class="fadein">
-        <h1 id="welcome">Welcome &#128075;</h1>
+        <p id="welcome">Welcome &#128075;</p>
         <a href="#contact_section" id="contact_sc">Contact Me</a>
     </div>
     <div id="intro" class="fadein">
