--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,400;9..40,500&display=swap" rel="stylesheet">
-    <title>Raghav Babbar</title>
+    <title>Raghav's Web Portfolio</title>
 </head>
 <body>
     <div id="cursor_dot"></div>
