added download cv link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <div id="cursor_outline"></div>
     <div id="header" class="fadein">
         <p id="welcome">Welcome &#128075;</p>
-        <a href="#contact_section" id="contact_sc">Contact Me</a>
+        <div id="head_links">
+            <a href="#contact_section" id="contact_sc">Contact Me</a>
+            <a href="Resume_Raghav_Babbar_2024.pdf" id="download_cv" download>Download CV</a>
+        </div>
     </div>
     <div id="intro" class="fadein">
         <img src="pfp.jpg" alt="pfp" id="pfp" class="bottotop">
